added SLES as O.S. plus support for 12.1.2 coherence clusters